This commit fixes logical bugs identified using the FindBugs plugin.
Bug fixing includes:

1) Changing new Integer() to Integer.valueOf()
2) Removing dead store variables
3) Fixing methods that returned null instead of empty string.